:hammer: fix nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,10 @@
-upstream planme_backend {
-    server planme_backend:5000;
+upstream opject {
+    server opject:3000;
 }
 
 server {
     listen 80;
-    location /api {
-        proxy_pass http://planme_backend;
+    location / {
+        proxy_pass http://opject;
     }
 }
